[package]
name = "wled-mqtt-bridge"
version = "2.0.7"
edition = "2021"
description = "A lightweight Rust service that connects a WLED instance with MQTT."
license = "MIT"
repository = "https://github.com/tobiaswaelde/wled-mqtt-bridge"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
